# learn2slither

./: .gitignore  README.md  agent.py  play_snake.py  pyproject.toml  requirements.txt  run.py  v1.weight
learn2slither/: Agent.py  MetaParameters.py  Snake.py  YamlParser.py
meta/: v1.yml  v2.yml  v3.yml  v4.yml  v5.yml
metrics/: v2.txt
models/: v1.weight  v2.weight  v3.weight  v4.weight  v5.weight
snake/: Agent.py  Snake.py
