[project]
name = "learn2slither"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-types",
    "click",
    "contourpy",
    "cycler",
    "filelock",
    "fonttools",
    "fsspec",
    "Jinja2",
    "kiwisolver",
    "MarkupSafe",
    "matplotlib",
    "mpmath",
    "networkx",
    "numpy",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-cufile-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvshmem-cu12",
    "nvidia-nvtx-cu12",
    "packaging",
    "pillow",
    "pydantic",
    "pydantic_core",
    "pygame",
    "pyparsing",
    "python-dateutil",
    "setuptools",
    "six",
    "strictyaml",
    "sympy",
    "torch",
    "triton",
    "typing-inspection",
    "typing_extensions"
]
